# ImeLabo

./: CMakeLists.txt  Google.txt  build.cmd  client.cpp  client.h  convert.cpp  convert.h  convert_test.cpp  net0_test.cpp  net1_test.cpp  server.cpp  util.cpp  util.h
data/: dakuon.h  romaji.h
